# maw-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  REPORT.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.maw/: phase.json  solo-justified  strategy.json
crates/maw-auth/: Cargo.toml
crates/maw-auto-wake/: Cargo.toml
crates/maw-bind/: Cargo.toml
crates/maw-bring/: Cargo.toml
crates/maw-calver/: Cargo.toml
crates/maw-cli/: Cargo.toml  build.rs
crates/maw-discord-backfill/: Cargo.toml  README.md
crates/maw-discord-backfill/src/: api.rs  engine.rs  error.rs  index.rs  lib.rs  main.rs  output.rs  token.rs
crates/maw-feed/: Cargo.toml
crates/maw-fuzzy/: Cargo.toml
crates/maw-hub/: Cargo.toml
crates/maw-identity/: Cargo.toml
crates/maw-matcher/: Cargo.toml
crates/maw-peer/: Cargo.toml
crates/maw-plugin-manifest/: Cargo.toml
crates/maw-plugin-pdk/: Cargo.toml
crates/maw-plugin-pdk/src/: host.rs  lib.rs
crates/maw-plugin-scaffold/: Cargo.toml
crates/maw-policy/: Cargo.toml
crates/maw-routing/: Cargo.toml
docs/: codex-team-spawn.md  config-guide.md  discord-native-live-proof.md  install.md  maw-js-fork-patch-migration.md  parity-matrix.md  wasm-migration-design.md  wire-protocol.md
fleet-plugins/: README.md
scripts/: deploy-discord-backfill-sila.sh  gen-routing-corpus.ts  generate-homebrew-formula.sh
specs/: 1-fork-ports-w1.md  28-workon-gitignore-fail-closed.md  30-mirror-api.md  33-pulse-remote-cleanup.md  55-l1-notify-ack.md  9-maw-alpha-parity.md  99-l2-lifecycle-observer.md
(+870 files in other folders)
