[package]
name = "maw-plugin-pdk"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed Rust contracts for maw WASM plugins"
keywords = ["maw", "plugin", "extism", "wasm"]
categories = ["wasm"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
